--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>    
     <header class="logo">
-        <img src="img/Lingscars1.png" alt="LINGsCARS Logo" />
+        <img src="img/Lingscars1.png" alt="LINGsCARS Logo" >
     </header>
 
     <nav class="topnav">
