--- a/Quote.html
+++ b/Quote.html
@@ -28,8 +28,8 @@
     <div class="google-form">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerl4lWKOVaMsqvpTuUD7R1Hi_bh_KJRODsxZUAjZxDVpLN0g/viewform?embedded=true" 
         width="600" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-        <h3>How It Works</h3>
+        <div class="summary">
+            <h2>How It Works</h2>
         
         <p>
             Getting a quote from LINGsCARS is fast and simple. Just follow these steps:
@@ -37,6 +37,8 @@
             <br>Choose Your Terms: Pick your preferred leasing duration, mileage allowance, and any optional extras you might need.
             <br>Enter Your Details: Fill out the form with your contact information so we can send you your personalized quote.
         </p>
+        </div>
+        
     </div>
 
     <footer>
