--- a/alfa romeo.html
+++ b/alfa romeo.html
@@ -17,7 +17,7 @@
 
     <header>
         <h1>Alfa Romeo 147</h1>
-        <img src="img/Alfa Romeo Car.png" alt="Alfa Romeo 147">
+        <img src="img/Alfa Romeo Car.png" alt="Alfa Romeo 147" class="responsive">
     </header>
 
     <main>
