Implementing responsive images

--- a/audi.html
+++ b/audi.html
@@ -17,7 +17,7 @@
 
     <header>
         <h1>Audi RS 6 Avant</h1>
-        <img src="img/audi Car.png" alt="Audi RS 6 Avant">
+        <img src="img/audi Car.png" alt="Audi RS 6 Avant" class="responsive">
     </header>
 
     <main>
