--- a/fiat.html
+++ b/fiat.html
@@ -17,7 +17,7 @@
     
     <h1>Fiat Abarth</h1>
 
-    <img src="img/Fiat Abarth.png" alt="Fiat Abarth">
+    <img src="img/Fiat Abarth.png" alt="Fiat Abarth" class="responsive">
 
     <h2>Specifications</h2>
     <p>
