--- a/productspage.html
+++ b/productspage.html
@@ -37,7 +37,7 @@
             </div>
             <div class="car-item">
                 <img src="img/Alfa Romeo.png" alt="Alfa Romeo" width="150" height="150">
-                <a href="alfa_romeo.html" class="nav-btn">Alfa Romeo</a>
+                <a href="alfa romeo.html" class="nav-btn">Alfa Romeo</a>
             </div> 
         </div>
 
