--- a/bmw.html
+++ b/bmw.html
@@ -17,7 +17,7 @@
 
     <h1>BMW F34 3 Series GT Gran Turismo 325d</h1>
     
-    <img src="img/Bmw car.png" alt="BMW F34 3 Series GT Gran Turismo 325d">
+    <img src="img/Bmw car.png" alt="BMW F34 3 Series GT Gran Turismo 325d" class="responsive">
 
     <h2>Specifications</h2>
     <p>
