--- a/fiat.html
+++ b/fiat.html
@@ -17,7 +17,7 @@
     
     <h1>Fiat Abarth</h1>
 
-    <img src="img/Fiat Abarth.png" alt="Fiat Abarth" class="responsive">
+    <img src="img/Fiat Abarth.png" alt="Picture of a Fiat Abarth" class="responsive">
 
     <h2>Specifications</h2>
     <p>
@@ -42,7 +42,11 @@
     <a href="Quote.html" class="nav-btn">Get A Quote</a>  
 
     <footer>
-        <p>&copy; 2024 LINGsCARS</p>
+        <p>LINGsCARS is a Car Leasing company based in the UK.</p>
+        <h3>You can trust LINGsCARS</h3>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
     </footer>
+
+    <script src="java.js"></script>
 </body>
 </html>
