--- a/index.html
+++ b/index.html
@@ -5,32 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>LINGsCARS</title>
+
+    <meta name="description" content="LINGsCARS offers the UK's best car leasing deals. 
+    Lease your next car, whether a sleek city car, spacious SUV, or eco-friendly hybrid, at affordable rates.
+     You can trust LINGsCARS!">
+    <meta name="keywords" content="car leasing,
+    UK car leasing, affordable car leasing, best car leasing deals, 
+    LINGsCARS, lease a car, UK vehicles, Fiat Abarth lease">
+    <meta name="author" content="LINGsCARS">
+
 </head>
-<body>    
+<body>
     <header class="logo">
-        <img src="img/Lingscars1.png" alt="LINGsCARS Logo" >
+        <img src="img/Lingscars1.png" alt="LINGsCARS Logo">
     </header>
 
     <nav class="topnav">
-        <a class="active" href="index.html">Home</a> 
-        <a href="productspage.html">Cars</a> 
-        <a href="aboutpage.html">About Us</a> 
-        <a href="contactpage.html">Contact Us</a> 
+        <a class="active" href="index.html">Home</a>
+        <a href="productspage.html">Cars</a>
+        <a href="aboutpage.html">About Us</a>
+        <a href="contactpage.html">Contact Us</a>
         <a href="news.html">News On Us</a>
     </nav>
 
     <div class="greeting">
         <h1>LINGsCARS.com</h1>
-        <h2>Welcome To LINGsCARS<br>The UK's Best Car Leasing Website</h2> 
-    </div> 
+        <h2>Welcome To LINGsCARS<br>The UK's Best Car Leasing Website</h2>
+    </div>
 
     <div class="heroshot">
-        <img src="img/Dealership.png" alt="Hero Shot" class="responsive"> 
+        <img src="img/Dealership.png" alt="Heading picture of cars at a dealership" class="responsive">
     </div>
 
     <section class="summary">
         <p>
-            At LINGsCARS, we make car leasing simple, affordable, and—most importantly—fun! 
+            At LINGsCARS, we make car leasing simple, affordable, and—most importantly—fun!
             Whether you’re looking for a sleek city car, a spacious SUV, or an eco-friendly hybrid, we’ve got you covered.
             Our fresh approach to leasing is designed to take the stress out of car hunting, while still giving you the best deal possible.
             Trust us, you’re in good hands—after all, “You can trust LINGsCARS.”
@@ -41,7 +50,7 @@
 
     <section class="best-car-leasing-deals">
         <div class="car-item">
-            <img src="img/Fiat Abarth.png" alt="Fiat Abarth">
+            <img src="img/Fiat Abarth.png" alt="Picture of a Fiat Abarth">
             <h3>Fiat Abarth</h3>
             <p>
                 Acceleration 0-62 mph: 6.9 to 7.3 seconds<br>
@@ -60,8 +69,9 @@
     <footer>
         <p>LINGsCARS is a Car Leasing company based in the UK.</p>
         <h3>You can trust LINGsCARS</h3>
-        <p>&copy; 2024 LINGsCARS</p>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
     </footer>
 
+    <script src="java.js"></script>
 </body>
 </html>
