--- a/news.html
+++ b/news.html
@@ -21,7 +21,15 @@
     <p>Here you can find out about the latest deals, new car brands, and additions made to LINGsCARS.</p>
     
     <footer>
-        <p>&copy; 2024 LINGsCARS</p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerl4lWKOVaMsqvpTuUD7R1Hi_bh_KJRODsxZUAjZxDVpLN0g/viewform?embedded=true" 
+        width="640" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…
+        </iframe>
+        
+        <p>LINGsCARS is a Car Leasing company based in the UK.</p>
+        <h3>You can trust LINGsCARS</h3>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
     </footer>
+
+    <script src="java.js"></script>
 </body>
 </html>
