--- a/productspage.html
+++ b/productspage.html
@@ -28,15 +28,15 @@
          
         <div class="car-container">
             <div class="car-item">
-                <img src="img/BMW.png" alt="BMW" width="150" height="150"> 
+                <img src="img/BMW.png" alt="Picture of a BMW logo" width="150" height="150"> 
                 <a href="bmw.html" class="nav-btn">BMW</a>
             </div>
             <div class="car-item">
-                <img src="img/Audi.png" alt="AUDI" width="200" height="200">
+                <img src="img/Audi.png" alt="Picture of a AUDI logo" width="200" height="200">
                 <a href="audi.html" class="nav-btn">Audi</a>
             </div>
             <div class="car-item">
-                <img src="img/Alfa Romeo.png" alt="Alfa Romeo" width="150" height="150">
+                <img src="img/Alfa Romeo.png" alt="Picture of a Alfa Romeo logo" width="150" height="150">
                 <a href="alfa romeo.html" class="nav-btn">Alfa Romeo</a>
             </div> 
         </div>
@@ -54,7 +54,11 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 LINGsCARS</p>
+        <p>LINGsCARS is a Car Leasing company based in the UK.</p>
+        <h3>You can trust LINGsCARS</h3>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
     </footer>
+
+    <script src="java.js"></script>
 </body>
 </html>
