--- a/alfa romeo.html
+++ b/alfa romeo.html
@@ -17,7 +17,7 @@
 
     <header>
         <h1>Alfa Romeo 147</h1>
-        <img src="img/Alfa Romeo Car.png" alt="Alfa Romeo 147" class="responsive">
+        <img src="img/Alfa Romeo Car.png" alt="Picture of an Alfa Romeo 147" class="responsive">
     </header>
 
     <main>
@@ -41,7 +41,11 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 LINGsCARS</p>
+        <p>LINGsCARS is a Car Leasing company based in the UK.</p>
+        <h3>You can trust LINGsCARS</h3>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
     </footer>
+
+    <script src="java.js"></script>
 </body>
 </html>
