--- a/audi.html
+++ b/audi.html
@@ -17,7 +17,7 @@
 
     <header>
         <h1>Audi RS 6 Avant</h1>
-        <img src="img/audi Car.png" alt="Audi RS 6 Avant" class="responsive">
+        <img src="img/audi Car.png" alt="Picture of an Audi RS 6 Avant" class="responsive">
     </header>
 
     <main>
@@ -44,5 +44,12 @@
         </section>
     </main>
     
+    <footer>
+        <p>LINGsCARS is a Car Leasing company based in the UK.</p>
+        <h3>You can trust LINGsCARS</h3>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
+    </footer>
+
+    <script src="java.js"></script>
 </body>
 </html>
