--- a/bmw.html
+++ b/bmw.html
@@ -17,7 +17,7 @@
 
     <h1>BMW F34 3 Series GT Gran Turismo 325d</h1>
     
-    <img src="img/Bmw car.png" alt="BMW F34 3 Series GT Gran Turismo 325d" class="responsive">
+    <img src="img/Bmw car.png" alt="Picture of a BMW F34 3 Series GT Gran Turismo 325d" class="responsive">
 
     <h2>Specifications</h2>
     <p>
@@ -35,7 +35,11 @@
     <a href="Quote.html" class="nav-btn">Get A Quote</a>  
 
     <footer>
-        <p>&copy; 2024 LINGsCARS</p>
+        <p>LINGsCARS is a Car Leasing company based in the UK.</p>
+        <h3>You can trust LINGsCARS</h3>
+        <p>&copy; <span id="current-year"></span> LINGsCARS</p>
     </footer>
+
+    <script src="java.js"></script>
 </body>
 </html>
