--- a/Quote.html
+++ b/Quote.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Quote</title>
+
+    <meta name="description" content="Get a quick and easy car leasing quote from LINGsCARS. 
+    No hidden fees, just competitive pricing and full cost breakdowns. 
+    Lease a car for personal or business needs.">
+    <meta name="keywords" content="car quote, car leasing, LINGsCARS, car leasing UK, quick quote, hassle-free car leasing">
+    <meta name="author" content="LINGsCARS">
+    
 </head>
 <body>
 
@@ -26,8 +33,8 @@
     </div>
 
     <form name="myform" id="myform" method="post" action="cgi_bin/myform.cgi" enctype="text/plain" target="_blank" onsubmit="return confirmSubmission()">
-        <label for="firstName">First Name:</label>
-        <input type="text" name="firstName" id="firstName" placeholder="Enter your first name" required>
+        <label for="firstName">Full Name:</label>
+        <input type="text" name="firstName" id="firstName" placeholder="Enter your Full Name" required>
 
         <label for="myEmail">Email:</label>
         <input type="email" name="myEmail" id="myEmail" placeholder="Enter your email" required>
