--- a/aboutpage.html
+++ b/aboutpage.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>About Us</title>
+
+    <meta name="description" content="Learn more about LINGsCARS,
+     the UK’s unique car leasing company known for its transparency, 
+     honesty, and a fun approach to car leasing.">
+
+    <meta name="keywords" content="car leasing, 
+    UK car leasing, LINGsCARS, car leasing company, fun car leasing, car rental UK">
+    <meta name="author" content="LINGsCARS">
+    
 </head>
 <body>
     <header>
