--- a/audi.html
+++ b/audi.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Audi RS 6 Avant</title>
+
+    <meta name="description" content="Lease the Audi RS 6 Avant at LINGsCARS. Explore the specs, cargo volume, engine configuration, and pricing for different mileage options.">
+    <meta name="keywords" content="Audi RS 6 Avant, car lease, Audi leasing, UK car leasing, LINGsCARS, sports car leasing">
+    <meta name="author" content="LINGsCARS">
+    
 </head>
 <body>
     <nav class="topnav">
