--- a/bmw.html
+++ b/bmw.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>BMW F34 3 Series GT Gran Turismo 325d</title>
+    <title> BMW </title>
+
+    <meta name="description" content="Explore the BMW F34 3 Series GT Gran Turismo 325d for car leasing with LINGsCARS. Discover the performance, specifications, and leasing options with competitive prices.">
+    <meta name="keywords" content="BMW F34, 3 Series GT, Gran Turismo 325d, car leasing, BMW leasing UK, car quote, car leasing options">
+    <meta name="author" content="LINGsCARS">
+
 </head>
 <body>
     <div class="topnav">
