--- a/contactpage.html
+++ b/contactpage.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Contact Us</title>
+
+    <meta name="description" content="Contact LINGsCARS for any inquiries about car leasing. 
+    We are here to help you with any questions you may have!">
+    <meta name="keywords" content="contact LINGsCARS,
+     car leasing contact, customer support LINGsCARS, car leasing UK">
+    <meta name="author" content="LINGsCARS">
+    
 </head>
 
 <body>
