--- a/fiat.html
+++ b/fiat.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Fiat Abarth</title>
+
+    <meta name="description" content="Explore the Fiat Abarth for car leasing with LINGsCARS. Get competitive leasing prices and find the perfect deal for your mileage needs.">
+    <meta name="keywords" content="Fiat Abarth, car leasing, Fiat leasing UK, Abarth, Fiat car, lease a Fiat, leasing options">
+    <meta name="author" content="LINGsCARS">
+    
 </head>
 <body>
     <div class="topnav">
