--- a/news.html
+++ b/news.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>News On Us - LINGsCARS</title>
+
+    <meta name="description" content="Stay updated with the latest news, deals, and car brands at LINGsCARS, the UK's most trusted car leasing company. Discover what's new with us!">
+    <meta name="keywords" content="car leasing news, LINGsCARS news, car deals, new car brands, UK car leasing, car leasing updates">
+    <meta name="author" content="LINGsCARS">
+    
 </head>
 
 <body>
@@ -24,7 +29,7 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerl4lWKOVaMsqvpTuUD7R1Hi_bh_KJRODsxZUAjZxDVpLN0g/viewform?embedded=true" 
         width="640" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…
         </iframe>
-        
+
         <p>LINGsCARS is a Car Leasing company based in the UK.</p>
         <h3>You can trust LINGsCARS</h3>
         <p>&copy; <span id="current-year"></span> LINGsCARS</p>
