--- a/productspage.html
+++ b/productspage.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Car Leasing</title>
+
+    <meta name="description" content="Discover the best car leasing deals in the UK at LINGsCARS. 
+    Choose from top brands including BMW, Audi, and Alfa Romeo with flexible and transparent leasing options.">
+    <meta name="keywords" content="car leasing, BMW leasing, Audi leasing, Alfa Romeo lease, UK car leasing, LINGsCARS deals">
+    <meta name="author" content="LINGsCARS">
+
 </head>
 
 <body>
