--- a/alfa romeo.html
+++ b/alfa romeo.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Alfa Romeo 147</title>
+
+    <meta name="description" content="Lease the Alfa Romeo 147 at LINGsCARS.
+     Discover specifications, fuel economy, and competitive pricing for 10,000 to 20,000 miles per year.">
+    <meta name="keywords" content="Alfa Romeo 147, car lease, Alfa Romeo leasing, UK car leasing, LINGsCARS">
+    <meta name="author" content="LINGsCARS">
+
 </head>
 <body>
     <nav class="topnav">
