--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Engine cylinder configuration: Straight engine<br>
                 Dimensions: 3,660 mm L x 1,627 mm W x 1,485-1,490 mm H<br>
                 Driveline: Front-wheel drive<br>
-                Number of doors: 2, 3
+                Number of doors: 2
             </p>
             <nav>
                 <a href="fiat.html" class="nav-btn">Lease Now!</a>
